--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,9 +1,8 @@
-<h1>Batata Rules</h1>
+<h1>Truco?!</h1>
 {{#each users}}
-<ul style="display: inline-block;">
-    {{name}}
-    {{#each cards}}
-        <li><a href="{{ enviarCarta value }}">{{convert suit}} {{value}}</a></li>
-    {{/each}}
+<ul style="display: inline-block; list-style-type: none;">
+  {{name}} {{#each cards}}
+  <li>{{convert suit}} {{value}}</li>
+  {{/each}}
 </ul>
 {{/each}}
